--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.github.lipyhui:ELog:v1.0.2"
 
-    implementation project(':utils')
+    implementation project(':qutils')
 }
 repositories {
     mavenCentral()
