--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.github.lipyhui:ELog:v1.0.2"
+    implementation "com.github.lipyhui:ELog:1.0.2"
 
     implementation project(':qutils')
 }
